[feature] ssd : Write function

--- a/ssd/ssd.vcxproj
+++ b/ssd/ssd.vcxproj
@@ -124,9 +124,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ssd_write.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ssd_nand.txt" />
+    <Text Include="ssd_output.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ssd_write.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
