[feature] ssd read feature add

--- a/ssd/ssd.vcxproj
+++ b/ssd/ssd.vcxproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ssd_nand.txt" />
+    <Text Include="ssd_output.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
