--- a/ssd/ssd.vcxproj.filters
+++ b/ssd/ssd.vcxproj.filters
@@ -37,6 +37,11 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ssd_nand.txt" />
+    <Text Include="ssd_nand.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="ssd_output.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
   </ItemGroup>
 </Project>
