--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="test_shell.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="mock_ssd_adapter.h" />
+    <ClInclude Include="ssd_interface.h" />
     <ClInclude Include="test_shell.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
