--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="test_shell.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="mock_ssd_adapter.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ssd_interface.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
