--- a/ssd/ssd.vcxproj.filters
+++ b/ssd/ssd.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="ssd_write.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gtest\gtest-all.cc">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gmock\gmock-all.cc">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -38,6 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ssd_write.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="error_code.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
