[fix] fix to review commant

--- a/ssd/ssd.vcxproj
+++ b/ssd/ssd.vcxproj
@@ -124,7 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Ssd_Read.cpp" />
+    <ClCompile Include="ssd_Read.cpp" />
     <ClCompile Include="ssd_read_test.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> %(AdditionalOptions)</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'"> %(AdditionalOptions)</AdditionalOptions>
@@ -133,7 +133,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Ssd_Read.h" />
+    <ClInclude Include="ssd_Read.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="ssd_nand.txt" />
