--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="test_shell.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="constants.h" />
     <ClInclude Include="mock_ssd_adapter.h" />
     <ClInclude Include="ssd_interface.h" />
     <ClInclude Include="test_shell.h" />
