[refactor] rename the test case for consistency

--- a/ssd/ssd.vcxproj
+++ b/ssd/ssd.vcxproj
@@ -132,7 +132,9 @@
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'"> %(AdditionalOptions)</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|x64'"> %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
-    <ClCompile Include="ssd_write_test.cpp" />
+    <ClCompile Include="ssd_write_test.cpp">
+      <AdditionalOptions ...>%(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ssd_Read.h" />
