--- a/ssd/ssd.vcxproj.filters
+++ b/ssd/ssd.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="SsdFacade.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ssd_constants.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ssd_nand.txt">
