--- a/ssd/ssd.vcxproj
+++ b/ssd/ssd.vcxproj
@@ -123,7 +123,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="commnad_process.cpp" />
+    <ClCompile Include="commnad_process_test.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pattern_checker.cpp" />
     <ClCompile Include="ssd_write.cpp" />
     <ClCompile Include="ssd_Read.cpp" />
     <ClCompile Include="ssd_read_test.cpp">
@@ -140,6 +143,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="command_process.h" />
+    <ClInclude Include="pattern_checker.h" />
     <ClInclude Include="ssd_Read.h" />
     <ClInclude Include="ssd_write.h" />
   </ItemGroup>
