[Feature] add ssd_adapter

--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="main_test.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ssd_adapter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test_shell.h">
@@ -45,6 +48,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="constants.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ssd_adapter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
