--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -138,6 +138,7 @@
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'"> %(AdditionalOptions)</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|x64'"> %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
+    <ClCompile Include="ssd_adapter.cpp" />
     <ClCompile Include="test_shell.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> %(AdditionalOptions)</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'"> %(AdditionalOptions)</AdditionalOptions>
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="constants.h" />
     <ClInclude Include="mock_ssd_adapter.h" />
+    <ClInclude Include="ssd_adapter.h" />
     <ClInclude Include="ssd_interface.h" />
     <ClInclude Include="test_shell.h" />
   </ItemGroup>
