--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ssd_adapter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="logger.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test_shell.h">
@@ -53,5 +56,13 @@
     <ClInclude Include="ssd_adapter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="logger.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="latest.log">
+      <Filter>리소스 파일</Filter>
+    </Text>
   </ItemGroup>
 </Project>
