--- a/ssd/ssd.vcxproj.filters
+++ b/ssd/ssd.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="pattern_checker.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="buffer_manager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="buffer_command_test.cpp">
+      <Filter>테스트 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ssd_read.h">
@@ -81,6 +87,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="ssd_file_io.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="buffer_manager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
