--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -144,6 +144,7 @@
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|x64'"> %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <ClCompile Include="ssd_adapter.cpp" />
+    <ClCompile Include="test_runner.cpp" />
     <ClCompile Include="test_shell.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> %(AdditionalOptions)</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'"> %(AdditionalOptions)</AdditionalOptions>
@@ -155,12 +156,14 @@
     <ClInclude Include="constants.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="mock_ssd_adapter.h" />
+    <ClInclude Include="runner.h" />
     <ClInclude Include="ssd_adapter.h" />
     <ClInclude Include="ssd_interface.h" />
     <ClInclude Include="test_shell.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="latest.log" />
+    <Text Include="shell_script.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
