--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="logger.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test_runner.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test_shell.h">
@@ -59,9 +62,15 @@
     <ClInclude Include="logger.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="runner.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="latest.log">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="shell_script.txt">
       <Filter>리소스 파일</Filter>
     </Text>
   </ItemGroup>
