[fix] runner: renamed the header file and modified the result

--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -156,9 +156,9 @@
     <ClInclude Include="constants.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="mock_ssd_adapter.h" />
-    <ClInclude Include="runner.h" />
     <ClInclude Include="ssd_adapter.h" />
     <ClInclude Include="ssd_interface.h" />
+    <ClInclude Include="test_runner.h" />
     <ClInclude Include="test_shell.h" />
   </ItemGroup>
   <ItemGroup>
