--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -62,7 +62,7 @@
     <ClInclude Include="logger.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="runner.h">
+    <ClInclude Include="test_runner.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
