--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="basic_test.cpp" />
+    <ClCompile Include="command_factory.cpp" />
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="script_test.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> %(AdditionalOptions)</AdditionalOptions>
@@ -154,14 +155,25 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="all_commands.h" />
+    <ClInclude Include="command_factory.h" />
     <ClInclude Include="constants.h" />
+    <ClInclude Include="erase_command.h" />
+    <ClInclude Include="erase_range_command.h" />
+    <ClInclude Include="erase_write_aging.h" />
+    <ClInclude Include="full_write_read_compare.h" />
+    <ClInclude Include="ICommand.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="mock_ssd_adapter.h" />
+    <ClInclude Include="partial_lba_write.h" />
+    <ClInclude Include="read_command.h" />
     <ClInclude Include="ssd_adapter.h" />
     <ClInclude Include="ssd_interface.h" />
     <ClInclude Include="test_case.h" />
     <ClInclude Include="test_runner.h" />
     <ClInclude Include="test_shell.h" />
+    <ClInclude Include="write_command.h" />
+    <ClInclude Include="write_read_aging.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="latest.log" />
