--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -78,6 +78,18 @@
     <ClCompile Include="erase_range_command.cpp">
       <Filter>Commands\소스파일</Filter>
     </ClCompile>
+    <ClCompile Include="full_write_read_compare.cpp">
+      <Filter>Commands\소스파일</Filter>
+    </ClCompile>
+    <ClCompile Include="partial_lba_write.cpp">
+      <Filter>Commands\소스파일</Filter>
+    </ClCompile>
+    <ClCompile Include="write_read_aging.cpp">
+      <Filter>Commands\소스파일</Filter>
+    </ClCompile>
+    <ClCompile Include="erase_write_aging.cpp">
+      <Filter>Commands\소스파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test_shell.h">
