[refactor] ICommand.cpp 추가, adapter이름 변경

--- a/test_shell/test_shell.vcxproj
+++ b/test_shell/test_shell.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="full_write_read_compare.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'"> %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
+    <ClCompile Include="ICommand.cpp" />
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="partial_lba_write.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'"> %(AdditionalOptions)</AdditionalOptions>
