--- a/ssd/ssd.vcxproj.filters
+++ b/ssd/ssd.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="buffer_command_test.cpp">
       <Filter>테스트 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ssd_load_file.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ssd_read.h">
@@ -90,6 +93,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="buffer_manager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ssd_load_file.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
