--- a/test_shell/test_shell.vcxproj.filters
+++ b/test_shell/test_shell.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClCompile Include="ICommand.cpp">
       <Filter>Commands\소스파일</Filter>
     </ClCompile>
+    <ClCompile Include="flush_command.h">
+      <Filter>Commands\헤더파일</Filter>
+    </ClCompile>
+    <ClCompile Include="flush_command.cpp">
+      <Filter>Commands\소스파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test_shell.h">
